TODO: UI fix, last checks..