@@ -10,7 +10,20 @@ import javafx.scene.control.TextArea;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 
+/* - Running on Eclipse by Maven:
+ * Opt1 : Goals: compile exec:java -Dexec.mainClass="com.javafx.view.JavaFX"
+ * Opt2 : Goals: exec:java
+ * 
+ * - Running as Jar file : Fat jar includes required javajfx jars, 
+ *  Assumption : excluding all -linux.jars to make it platform independent, haven't test in other OS yet.  
+ * 
+ * - Running on Linux, requires to pass required ...-linux.jar files.
+ *  
+ * java --module-path /home/altug/.m2/repository/org/openjfx/javafx-controls/21.0.2/javafx-controls-21.0.2-linux.jar:/home/altug/.m2/repository/org/openjfx/javafx-fxml/21.0.2/javafx-fxml-21.0.2-linux.jar:/home/altug/.m2/repository/org/openjfx/javafx-graphics/21.0.2/javafx-graphics-21.0.2-linux.jar:/home/altug/.m2/repository/org/openjfx/javafx-base/21.0.2/javafx-base-21.0.2-linux.jar \
+--add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base \
+-jar target/javafx-file-0.0.1-SNAPSHOT.jar
 
+*/
 public class JavaFX  extends Application{
 	
 	public static void main(String[] args) {
